--- a/SpringMVC_SSM/src/main/resources/jdbc.properties
+++ b/SpringMVC_SSM/src/main/resources/jdbc.properties
@@ -1,7 +1,9 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://127.0.0.1:3306/j2ee?serverTimezone=UTC
+#jdbc.url=jdbc:mysql://10.66.28.177:3306/j2ee?serverTimezone=UTC
 jdbc.user=root
 jdbc.password=12345678
+#jdbc.password=docker_qa
 jdbc.maxTotal=30
 jdbc.maxIdle=10
 jdbc.initialSize=5
